--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "1.15.2",
     "method-override": "2.3.6",
     "express-session": "1.14.1",
-    "ejs": "2.5.2"
+    "ejs": "2.5.2",
+    "bootstrap": "^4.0.0"
   }
 }
